kubernetes/clusters/staging/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: n8n
  name: n8n
  namespace: oblivion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n
          name: n8n
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "250Mi"
            limits:
              memory: "500Mi"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-claim0
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: oblivion
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: oblivion
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: wildcard-winwithcherwin-com
      hosts:
        - n8n.staging.winwithcherwin.com
  rules:
    - host: n8n.staging.winwithcherwin.com
      http:
        paths:
          - path: /rest/oauth2-credential/callback
            pathType: Exact
            backend:
              service:
                name: n8n
                port:
                  number: 5678
